[package]
name          = "cw-wrapped-token"
description   = "Demo contract for development and testing purpose"
version       = "0.0.0"
authors       = ["Larry Engineer <gm@larry.engineer>"]
edition       = "2021"
rust-version  = "1.65"
license       = "UNLICENSED"
homepage      = "https://larry.engineer"
repository    = "https://github.com/steak-enjoyers/cw-wrapped-token"
documentation = "https://github.com/steak-enjoyers/cw-wrapped-token#readme"
keywords      = ["cosmwasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = "1.1"
cosmwasm-std    = "1.1"
cw-bank         = { git = "https://github.com/steak-enjoyers/cw-sdk", rev = "2a5ca8d", features = ["library"] }
thiserror       = "1"
